<resources>
    <string name="app_name">SCU MP</string>
    <string name="title_activity_message_list">MessageList</string>
    <string name="tab_text_1">Buyers</string>
    <string name="tab_text_2">Sellers</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sell">Sell</string>
    <string name="menu_message">Message</string>
    <string name="menu_like">Like</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_sell1">SellActivity1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sell2">SellActivity2</string>


    String[] categoryItems = {"Furniture","Textbooks","Computers","School
    Supplies","Transportation"};
    String[] conditionItems = {"New","Like New","Good","Fair","Poor"};

    <string name="select">Select Item</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay_hint_email">email</string>
    <string name="pay_hint_name">name</string>
    <string name="pay_hint_card_number">card number</string>
    <string name="pay_hint_expiry_month">month</string>
    <string name="pay_hint_expiry_year">year</string>
    <string name="pay_hint_cvv">cvv</string>

    <string name="pay_title">Card Information</string>

    <string name="google_maps_API_key">AIzaSyAYu5iVzIR2vJg3JVnMBsq_t8BGZTpbgq8</string>
    <string name="API_KEY">AIzaSyAYu5iVzIR2vJg3JVnMBsq_t8BGZTpbgq8</string>


</resources>