<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_money_black"
            android:title="@string/menu_sell" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message_black"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_like"
            android:icon="@drawable/ic_heart_black"
            android:title="@string/menu_like" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_black"
            android:title="@string/menu_profile" />
    </group>
</menu>